src/objects/Room__c.object
<CustomObject>
    <description>Hotel room for convention registrants.</description>
    <fields>
        <fullName>Convention_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Convention Group</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Rooms</relationshipLabel>
        <relationshipName>Rooms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Hotel__c</fullName>
        <description>Account corresponding to the hotel where the convention will take place.</description>
        <inlineHelpText>Account corresponding to the hotel where the convention will take place.</inlineHelpText>
        <label>Hotel</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Rooms</relationshipLabel>
        <relationshipName>Rooms</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Male_Female_Private__c</fullName>
        <label>Male/Female/Private</label>
        <picklist>
            <picklistValues>
                <fullName>Female</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Male</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Private or Adult w/ Spouse</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Number_of_Occupants__c</fullName>
        <formula>if (And(Registrant_1__c&lt;&gt;&apos;&apos;,Registrant_2__c&lt;&gt;&apos;&apos;,Registrant_3__c&lt;&gt;&apos;&apos;,Registrant_4__c&lt;&gt;&apos;&apos;), 4, 
if(And(Registrant_1__c&lt;&gt;&apos;&apos;,Registrant_2__c&lt;&gt;&apos;&apos;,Registrant_3__c&lt;&gt;&apos;&apos;),
3,
if(And(Registrant_1__c&lt;&gt;&apos;&apos;,Registrant_2__c&lt;&gt;&apos;&apos;),
2,
if(Registrant_1__c&lt;&gt;&apos;&apos;,
1,
0))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Occupants</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Room Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Rooms</relationshipLabel>
        <relationshipName>Rooms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>R1P1__c</fullName>
        <formula>Registrant_1__r.Roommate_Preference_1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>R1P1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>R1P2__c</fullName>
        <formula>Registrant_1__r.Roommate_Preference_2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>R1P2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>R1P3__c</fullName>
        <formula>Registrant_1__r.Roommate_Preference_3__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>R1P3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registrant_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Opportunity record for the first person who will stay in the room.</inlineHelpText>
        <label>Registrant 1</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Rooms</relationshipLabel>
        <relationshipName>Rooms1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Registrant_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Opportunity record for the second person who will stay in the room.</inlineHelpText>
        <label>Registrant 2</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Room</relationshipLabel>
        <relationshipName>Rooms2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Registrant_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Opportunity record for the third person who will stay in the room.</inlineHelpText>
        <label>Registrant 3</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Room</relationshipLabel>
        <relationshipName>Rooms3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Room_Number__c</fullName>
        <description>The room number, or proxy for room number, for the hotel.  Assigned by JSF staff after completion of registration.  Can be used to reference rooms that have members from two or more delegations.</description>
        <inlineHelpText>The room number, or proxy for room number, for the hotel.  Assigned by JSF staff after completion of registration.  Can be used to reference rooms that have members from two or more delegations.</inlineHelpText>
        <label>Room Number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>School_1__c</fullName>
        <formula>Registrant_1__r.Primary_Contact__r.High_School__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>School 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>School_2__c</fullName>
        <formula>&quot;Test&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>School 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>School_3__c</fullName>
        <formula>&quot;Test&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>School 3</label>
        <type>Text</type>
    </fields>
    <label>Room</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Hotel__c</columns>
        <columns>Product__c</columns>
        <columns>Male_Female_Private__c</columns>
        <columns>Registrant_1__c</columns>
        <columns>Registrant_2__c</columns>
        <columns>Registrant_3__c</columns>
        <columns>Registrant_4__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Room_View_Test</fullName>
        <columns>NAME</columns>
        <columns>Registrant_1__c</columns>
        <columns>Registrant_2__c</columns>
        <columns>R1P2__c</columns>
        <columns>R1P1__c</columns>
        <columns>School_1__c</columns>
        <columns>School_2__c</columns>
        <filterScope>Everything</filterScope>
        <label>Room View - Test</label>
    </listViews>
    <nameField>
        <label>Room ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rooms</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>